--- a/fluttering-avian-tests/fluttering-avian-tests.csproj
+++ b/fluttering-avian-tests/fluttering-avian-tests.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Godot.NET.Sdk/4.2.2">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net7.0</TargetFramework>
+        <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'ios' ">net8.0</TargetFramework>
         <RootNamespace>fluttering_avian_tests</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
