Implemented character tests

--- a/fluttering-avian-tests/fluttering-avian-tests.csproj
+++ b/fluttering-avian-tests/fluttering-avian-tests.csproj
@@ -24,4 +24,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\fluttering-avian\fluttering-avian.csproj" />
+    </ItemGroup>
+
 </Project>
